2003-04-15  Kevin Vandersloot <kfv101@psu.edu>

	* descs/Makefile.am: remove SK__x.keyprop.in since it doesn't have a
	proper language name and crashes gkb. Fixes bug #110825
	
	* descs/SK__x.keyprop.in: Put in a Fixme so that the proper language name gets
	added

2003-03-14  Shivram U  <shivaram.upadhyayula@wipro.com>

	* gkb.[ch], system.c (gkb_update_handlers): Added a new function, which
	connects or disconnects the button press event handler and the 
	gdk_window_filter.
	gkb_update(): If we are updating the keymap disconnect the handlers
	gkb_set_keymap_idle (): Reconnect the handlers.
	Fixes (#108378)

2003-03-13  Chema Celorio  <chema@celorio.com>

	* xmodmap/xmodmap.es: key 34 is dead_acute not dead_grave for spanish
	keyboards

2003-01-21  Shivram U  <shivaram.upadhyayula@wipro.com>

	* gkb.[ch], keygrab.c: fix for problems while setting a hotkey #104043

2003-03-11  Rajkumar Sivasamy  <rajkumar.siva@wipro.com>

	* gkb.c: Don't revert to default keymap while exiting.
	Patch approved by Chema Celorio
	Fixes bug: 107018

2003-03-10  Kevin Vandersloot <kfv101@psu.edu>

	* gconf.c: check for NULL strings before setting gconf value
	
	* prop-map.c: don't free the whole keymap since we are only changing
	a few items. SHould fix bug #107938

2003-03-07  Mark McLoughlin  <mark@skynet.ie>

	* gkb.c: (help_cb):
	* prop-add.c: (addhelp_cb):
	* prop-map.c: (gkb_prop_map_help_clicked):
	* prop.c: (prophelp_cb): update for screen-exec changes.

2003-01-20  Shivram U  <shivaram.upadhyayula@wipro.com>

	* prop.c, prop-add.c: Close the "Select Keyboard" dialog if the 
	preferences window is closed.

2003-01-22  Irene Ryan <irene.ryan@sun.com>

	* /help/C/gkb.xml, gkb-C.omf: updated help files for GNOME 2.2
	* /help/C/figures/gkb_applet.png: updated screenshot for help file
	
2002-12-14  Fernando Herrera <fherrera@onirica.com>

	* GNOME_KeyboardApplet_Factory.server.in.in: added bugzilla * attributtes

2002-12-08  Szabolcs Ban  <shooby@gnome.hu>
