@@ -287,6 +287,7 @@ gkb_prop_create_display_frame (GkbPropertyBoxInfo * pbi)
   GtkWidget *hbox;
   GtkWidget *pixmap;
   GtkWidget *table;
+  gint size;
 
   frame = gtk_frame_new (_("Display"));
 
@@ -314,14 +315,19 @@ gkb_prop_create_display_frame (GkbPropertyBoxInfo * pbi)
 			   GTK_SIGNAL_FUNC (gkb_prop_mode_changed), pbi,
 			   gkb_util_get_int_from_mode (pbi->mode));
   g_list_free (mode);
+  size = panel_applet_get_size (PANEL_APPLET (pbi->gkb->applet));
+
+  /* hopeful fix for "bug" #76223 */
+  if (size > GKB_SMALL_PANEL_SIZE) {
   
-  gkb_prop_label_at (table, 0, 1, _("Applet _size: "));
-  sizes = gkb_prop_get_sizes ();
-  gkb_prop_option_menu_at (table, 1, 1, sizes,
+     gkb_prop_label_at (table, 0, 1, _("Applet _size: "));
+                                                                                     
+     sizes = gkb_prop_get_sizes ();
+     gkb_prop_option_menu_at (table, 1, 1, sizes,
 			   GTK_SIGNAL_FUNC (gkb_prop_size_changed),
                            pbi, pbi->is_small ? 0 : 1);
-  g_list_free (sizes);
-
+     g_list_free (sizes);
+  }
   return frame;
 }
 
