@@ -1,3 +1,9 @@
+2003-04-20  Szabolcs Ban  <shooby@gnome.hu>
+
+	* gkb.c, gkb.h: moved GKB_PANEL_SIZE_SMALL define
+	* prop.c: if panel size is small don't show size preference
+	Fixes (#76223) 
+
 2003-04-15  Kevin Vandersloot <kfv101@psu.edu>
 
 	* descs/Makefile.am: remove SK__x.keyprop.in since it doesn't have a
